--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,16 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.headline-text{
+  @apply mt-6 my-6 text-center text-2xl font-bold leading-9 tracking-normal text-gray-800
+}
+.outline-btn{
+  @apply mt-6 sm:mt-0 w-full sm:w-max py-1.5 px-2 rounded-lg ring-1 ring-inset ring-gray-300 text-gray-900 bg-pink-50/40
+}
+th,td{
+  @apply p-1.5 text-gray-800 ring-1 ring-inset ring-gray-100
+}
+.avg-flex{
+  @apply flex gap-2 items-center justify-center
+}
