--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,7 +20,7 @@
   @apply mt-6 sm:mt-0 w-full sm:w-max py-1.5 px-2 rounded-lg ring-1 ring-inset ring-gray-300 text-gray-900 bg-pink-50/40
 }
 th,td{
-  @apply p-1.5 text-gray-800 ring-1 ring-inset ring-gray-100
+  @apply p-1.5 text-gray-800
 }
 .avg-flex{
   @apply flex gap-2 items-center justify-center
