worked on contact form in help and support page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,3 +25,6 @@ th,td{
 .avg-flex{
   @apply flex gap-2 items-center justify-center
 }
+.body-text{
+  @apply mt-6 text-lg leading-8 text-gray-600
+}
