--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
 :root {
   --primary-font: 'Roboto', sans-serif;
   --primary-color: #11685E;
+  --secondary-color: #d9d9d963;
 }
 
 code {
@@ -34,12 +35,98 @@ code {
 }
 
 .sideNav {
-  width: 20%;
+  width: 18%;
   background: var(--primary-color);
   height: 100dvh;
 }
 
 .webName {
   font-size: 1.2em;
-  
+  font-family: var(--primary-font);
+  color: #fff;
+  font-weight: 500;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 6px;
+  flex-direction: column;
+}
+
+.userAccount {
+  cursor: pointer;
+  margin: 0 auto;
+  margin-top: 10px;
+  padding: 5px;
+  align-items: center;
+  background: var(--secondary-color);
+  width: 90%;
+  display: flex;
+  font-size: 1em;
+  color: white;
+  border-radius: 13px;
+  margin-bottom: 15px;
+}
+
+.userIcon {
+  margin: 0 10px 0 10px;
+  font-size: 20px;
+  background: white;
+  color: rgb(75, 75, 75);
+  padding: 7px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+}
+
+.userAccount p {
+  font-family: var(--primary-font);
+  font-size: 1.1em;
+  font-weight: 500;
+}
+
+.line {
+  margin: 0 auto;
+  width: 90%;
+  height: 1px;
+  background-color: rgba(255, 255, 255, 0.541);
+}
+
+.navLink {
+  cursor: pointer;
+  font-weight: 500;
+  margin: 0 auto;
+  margin-top: 10px;
+  padding: 5px;
+  align-items: center;
+  background: var(--secondary-color);
+  width: 90%;
+  display: flex;
+  font-size: 0.9em;
+  color: white;
+  border-radius: 13px;
+  margin-bottom: 15px;
+}
+
+.navLink:hover {
+  transform: scale(1.08);
+  transition: 0.3s;
+}
+
+.logFooter {
+  width: 18%;
+  padding: 10px;
+  background: #13131375;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  color: white;
+}
+
+.logFooter p {
+  cursor: pointer;
+}
+
+.logFooter p:hover {
+  text-decoration: underline;
 }
