--- a/ass-1/src/index.css
+++ b/ass-1/src/index.css
@@ -1,13 +1,31 @@
-navigation Bar body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.navbar {
+  background-color: rgb(87, 41, 41);
+  height: 80px;
+  /* display: flex; */
+  align-items: right;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.navbar-brand {
+  font-size: 10px;
+  border-radius: 5px;
+}
+.dropdown-menu {
+  width: 200px;
+  height: 300px;
+  border-radius: 5px;
+}
+ul li a {
+  color: aqua;
+}
+ul li {
+  margin-top: 15px;
+  font-size: 25px;
+  text-align: center;
+}
+ul li a:hover {
+  color: rgb(211, 211, 171);
+}
+.title {
+  color: aqua;
+  text-align: center;
+  font-size: 45px;
 }
