--- a/ass-1/src/index.css
+++ b/ass-1/src/index.css
@@ -29,3 +29,36 @@ ul li a:hover {
   text-align: center;
   font-size: 45px;
 }
+
+/* HOMEPAGE */
+.p1 {
+  font-size: 30px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+.Heading2 {
+  text-align: center;
+  margin-bottom: 30px;
+  background-color: aqua;
+  font-size: 45px;
+}
+
+.content {
+  margin: 40px;
+}
+.card {
+  height: auto;
+  width: 18rem;
+  box-shadow: 20px;
+  border-radius: 5rem;
+  border-color: rgb(79, 170, 22);
+}
+
+#card-Main {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  background-color: white;
+}
+* {
+  background-color: black;
+}
