--- a/my-app/src/pages/help/help.css
+++ b/my-app/src/pages/help/help.css
@@ -1,3 +1,62 @@
 .help-page {
     background-color: cornflowerblue;
+    padding: 30px;
+    margin: 30px;
+    border-radius: 20px;
 }
+
+input[type="text"], input[type="password"], input[type="email"] {
+    margin: 10px 0 0 0;
+    width: 100%;
+    min-height: 3em;
+    border-radius: 15px;
+    border: none;
+}
+
+textarea {
+    border: none;
+    width: 100%;
+    min-height: 8em;
+    margin: 10px 0 0 0;
+    border-radius: 5px;
+}
+
+#submit {
+    border: none;
+    padding: 0 15px;
+    border-radius: 5px;
+    transition: all 0.2s ease;
+    margin-left: 5px;
+    background-color: white;
+}
+
+#submit:hover {
+    cursor: pointer;
+}
+
+#submit:active {
+    transform: scale(0.96);
+}
+
+#faq p{
+    padding: 10px 5px;
+}
+
+#faq {
+    padding: 15px 0;
+    margin: 15px 0;
+}
+
+#faq h3, #contact h3 {
+    text-align: center;
+    font-size: 20px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    font-family: baskerville, Verdana, Geneva, Tahoma, sans-serif;
+    text-transform: uppercase;
+}
+
+#contact fieldset{
+    padding: 10px 5px;
+}
+
