--- a/my-app/src/pages/help/help.css
+++ b/my-app/src/pages/help/help.css
@@ -60,3 +60,27 @@ textarea {
     padding: 10px 5px;
 }
 
+/* .message{
+    width: 100%;
+    position: relative;
+    margin-bottom: 60px;
+    display: flex;
+    justify-content: center;
+}
+.message .success{
+    font-size: 20px;
+    color: green;
+    position: absolute;
+    animation: buttons .3s linear;
+    display: none;
+}
+.message .danger{
+    font-size: 20px;
+    color: red;
+    position: absolute;
+    transition: .3s;
+    animation: buttons .3s linear;
+    display: none;
+}
+
+ */
