--- a/my-app/src/pages/instructor/instructor.css
+++ b/my-app/src/pages/instructor/instructor.css
@@ -23,3 +23,12 @@
 .instructor-page h1 {
     color: black;
 }
+
+#message-form h3 {
+    text-align: center;
+    font-size: 20px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    font-family: baskerville, Verdana, Geneva, Tahoma, sans-serif;
+    text-transform: uppercase;
+}
