--- a/my-app/src/pages/missingGrade/missingGrade.css
+++ b/my-app/src/pages/missingGrade/missingGrade.css
@@ -1,3 +1,6 @@
 .m-grade-page {
-    background-color: thistle;
+    background-color: #d8bfd8;
+    margin: 80px 250px 60px 250px;
+    padding: 60px 60px 90px;
+    border-radius: 30px;
 }
