added a footer and slider and modified some of the pages and added some css files

--- a/missing-grade-system/src/App.css
+++ b/missing-grade-system/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+.section {
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-heading {
+  color: rgba(255, 217, 0, 0.711);
+  font-size: 27px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.underline {
+  height: 5px;
+  width: 4.5rem;
+  background-color: rgba(255, 127, 127, 0.662);
+  margin-top: 11px;
+  margin-bottom: 11px;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.img {
+  width: 50%;
+  height: 50%;
 }
 
-.App-link {
-  color: #61dafb;
+.bg-c-light {
+  background-color:dimgray;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.p {
+  font-size: 14px;
+  color: #262626;
 }
