Worked on routing the pages

--- a/ass-1/src/index.css
+++ b/ass-1/src/index.css
@@ -57,8 +57,5 @@ ul li a:hover {
   display: flex;
   justify-content: center;
   gap: 30px;
-  background-color: white;
-}
-* {
-  background-color: black;
+  /* background-color: white; */
 }
