--- a/my-app/src/pages/grade/grade.css
+++ b/my-app/src/pages/grade/grade.css
@@ -1,3 +1,54 @@
 .grade-page {
     background-color: darkgray;
+    margin: 60px 200px 60px 200px;
+    padding: 80px;
+    border-radius: 50px;
+}
+
+.year-button {
+    padding: 8px 18px;
+    margin: 30px;
+    border-radius: 50px;
+    border: none;
+    transition: all 0.2s ease;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+}
+
+.year-button:hover {
+    cursor: pointer;
+    background-color: #a3850e;
+}
+
+.year-button:active {
+    transform: scale(0.96);
+}
+
+.semester {
+    display: flex;
+    justify-content: center;
+}
+
+.row > table {
+    display: flex;
+    justify-content: center;
+}
+
+table {
+    border: 0.1px solid;
+    border-radius: 15px;
+    padding: 5px;
+}
+
+td {
+    background-color: transparent;
+    border: 1px solid;
+}
+
+.row>h3 {
+    text-align: center;
+    font-family: luminari Verdana, Geneva, Tahoma, sans-serif;
 }
