--- a/my-app/src/pages/help/help.css
+++ b/my-app/src/pages/help/help.css
@@ -1,5 +1,5 @@
 .help-page {
-    background-color: cornflowerblue;
+    background-image: linear-gradient(to bottom right, #bdc3c7, #2c3e50);
     padding: 30px;
     margin: 30px;
     border-radius: 20px;
