--- a/my-app/src/pages/login/login.css
+++ b/my-app/src/pages/login/login.css
@@ -1,5 +1,5 @@
 .login-page {
-    background-color: #334;
+    background: linear-gradient(to bottom right, rgba(121,161,128,1) 51%, rgba(2,0,36,1) 100%);
     margin: 70px 50px 80px 380px;
     padding: 50px;
     border-radius: 30px;
