--- a/my-app/src/pages/missingGrade/missingGrade.css
+++ b/my-app/src/pages/missingGrade/missingGrade.css
@@ -1,5 +1,5 @@
 .m-grade-page {
-    background-color: #d8bfd8;
+    background: linear-gradient(to bottom right, rgba(26,111,129,1) 55%, rgba(2,0,36,1) 100%);
     margin: 80px 250px 60px 250px;
     padding: 60px 60px 90px;
     border-radius: 30px;
