--- a/my-app/src/pages/home/home.css
+++ b/my-app/src/pages/home/home.css
@@ -1,7 +1,8 @@
 .home-page {
-    background-color: bisque;
-    margin: 50px;
+    background: linear-gradient(to bottom right, rgba(172,169,115,1) 51%, rgba(2,0,36,1) 100%);;
+    margin: 50px 150px 50px 150px;
     padding: 50px;
+    border-radius: 30px;
 }
 
 .home-page h1 {
