--- a/my-app/src/pages/instructor/instructor.css
+++ b/my-app/src/pages/instructor/instructor.css
@@ -1,5 +1,5 @@
 .instructor-page {
-    background-color: aqua;
+    background: linear-gradient(to bottom right, rgba(40,149,59,1) 11%, rgba(16,55,44,1) 32%, rgba(40,149,59,1) 66%, rgba(2,0,36,1) 100%);
     margin: 30px;
     padding: 30px;
     border-radius: 30px;
@@ -20,8 +20,8 @@
     padding: 8px 0;
 }
 
-.instructor-page h1 {
-    color: black;
+.instructor-page h1, .course, .instructor-page h3, fieldset {
+    color: white;
 }
 
 #message-form h3 {
