--- a/projectfolder/src/Components/LandingPage/ImageArea.css
+++ b/projectfolder/src/Components/LandingPage/ImageArea.css
@@ -7,17 +7,48 @@
     position: relative;
 }
 .image-container{
+    position: relative;
+    color: blue;
     width: 300px;
     height: 250px;
 }
 .img1{
     position: relative;
     top: 50px;
-    left: 20px;
+    left: 70px;
     width: 100%;
     height: 100%;
 }
 .img1:hover{
-    width: 350px;
-    height: 300px;
+    width: 320px;
+    height: 270px;
+}
+.img2{
+    position: relative; 
+    top: -255px;
+    left: 510px;
+    width: 100%;
+    height: 100%;
+}
+.img2:hover{
+    width: 320px;
+    height: 270px;
+}
+.text1{
+    display: inline-block;
+    position: relative;
+    top: 80px;
+    left: 180px;
+    font-family: 'Gemunu Libre', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+}
+.text2{
+    display: inline-block;
+    position: relative;
+    top: 70px;
+    left: 550px;
+    font-family: 'Gemunu Libre', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
 }
