I added a navbar to my react app, I also added functionality to my routes and also made sure that the whole website is navigable

--- a/src/components/DashboardPage.css
+++ b/src/components/DashboardPage.css
@@ -41,7 +41,7 @@
 /* Logout Button */
 .dashboard-header button {
   padding: 10px;
-  background-color: #d9534f; 
+  background-color: rgb(204, 188, 188)0c; 
   color: #ffffff; 
   border: none;
   cursor: pointer;
