--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -21,6 +21,19 @@ body {
     display: inline;
     margin-right: 1rem;
   }
+
+
+
+  .container {
+    background: url('UniversityOfGhana.jpg') center/cover no-repeat fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    color: #fff;
+    text-align: center;
+  }
   
   nav a {
     text-decoration: none;
@@ -39,7 +52,7 @@ body {
   }
   
   h1 {
-    color: #333;
+    color: #f1ebeb;
   }
   
   p {
