completed the landing or home page

--- a/project/src/WelcomeSection.css
+++ b/project/src/WelcomeSection.css
@@ -1,10 +1,22 @@
 .text{
     color: white;
     font-size: 60px;
+    font-family: 'Darker Grotesque', sans-serif;
 }
 .center-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Optional: Set the height of the container as 100% of the viewport height */
+    height: 20vh; /* Optional: Set the height of the container as 100% of the viewport height */
   }
+  /*.img{
+    width: 100px;
+    height: 180px; 
+  } */
+  .card-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
+  }
+  
