Make the dashboard page and make changes to some of the already existing files

--- a/src/Styles/utils.css
+++ b/src/Styles/utils.css
@@ -16,15 +16,24 @@
     @apply hover:cursor-pointer hover:shadow-lg duration-200 hover:bg-blue-200;
   }
   .sliding-texts{
-    @apply text-2xl italic text-blue-700 font-semibold
+    @apply text-7xl italic text-blue-500 font-semibold
   }
   .sliding-semi-text{
-    @apply text-xl italic text-blue-600 font-normal
+    @apply text-3xl italic text-blue-50 font-normal
+  }
+  .hover-apply{
+    @apply text-blue-500 text-xl
   }
 }
 
 .slide-text{
     animation: slide-text ease-in-out 5s infinite;
+}
+
+.grid-view{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(390px, 1fr));
+  gap: 2rem;
 }
 
 @keyframes slide-text{
