*Modify   -App.js   -Dashboard.js   -Faq.js   -GradeReport.js   -Login.js   -MissingGrade.js   -Overview.js   -ContactIntructor.js

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +9,21 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+:root {
+  --colorOne: #DCECFC;
+  --colorTwo: #142E5F;
+  --colorThree: #324D90;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
