--- a/src/Styling/Landing.css
+++ b/src/Styling/Landing.css
@@ -3,50 +3,83 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-
     height: 100vh;
+    width: 100%;
+    padding-top: 20px;
     gap: 5px;
   }
 
-  .Section1 {
-    padding: 20px;
-    border-radius: 20px;
-    background-color: aqua;
-    height: 250px;
-    width: 900px;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-  }
-  .Section2 {
-    gap: 20px;
-    border-radius: 20px;
-    background-color: greenyellow;
-    height: 250px;
-    width: 500px;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: row;
-  }
+.topSection {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
 
-  .mainInfo {
-    align-items: center;
-    justify-content: space-evenly;
-    gap: 20px;
-    display: flex;
-    flex-direction: row;
-    height: 200px;
-    width: 900px;
-  }
+.logo {
+  margin-top: -10px;
+}
 
-  .Messages1 {
-    background-color: blue;
-    width: 400px;
-    height: 180px;
-  }
+.title {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 
-  .Issue1 {
-    background-color: blue;
-    width: 400px;
-    height: 180px;
-  }
+.title1 {
+  margin-left: 50px;
+}
+
+
+.middleSection {
+  gap:20px;
+  justify-content: center;
+  align-items: center;
+  height: 80%;
+  width: 90%;
+  background-color: #eee;
+  display: flex;
+  flex-direction: row;
+}
+
+.middleSection0 {
+  height: 90%;
+  width: 47%;
+  background-color: white;
+}
+
+.m0text {
+  padding: 30px;
+}
+
+
+
+#dcs {
+  margin-top: 150px;
+}
+
+.middleSection1 {
+  height: 90%;
+  width: 47%;
+  background-color: white;
+}
+
+.m1text {
+  padding: 30px;
+}
+
+#Link {
+  text-decoration: none;
+  color: white;
+  font-size: 16px;
+}
+
+.loginButton {
+  background-color: #0000ff7e;
+  border-width: 0px;
+  border-radius: 50px;
+  margin-top: 240px;
+  margin-left: 190px;
+  width: 110px;
+  height: 35px;
+  color: white;
+}
