--- a/missing-grade-reporting-system/src/index.css
+++ b/missing-grade-reporting-system/src/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url('Components/Assests/UniOfGh.jpg');
+  
 }
 
 code {
