--- a/my-web/src/styles/main.css
+++ b/my-web/src/styles/main.css
@@ -4,6 +4,10 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Titillium Web',sans-serif;
+    
+}
+body{
+  min-height: 100vh;
 }
 :root{
     --mainColor:#29335C;
@@ -25,7 +29,7 @@ header{
   
   display: flex;
   align-items: center;
-  margin-left: 20px; 
+  margin-left: 350px; 
 }
 nav a{
     margin: 0 1rem;
@@ -53,7 +57,7 @@ header .nav-btn{
         opacity: 1;
     }
     header nav{
-        position: fixed;
+      position: fixed;
         top: 0;
         left: 0;
         width: 100%;
@@ -81,7 +85,7 @@ footer {
     color: var(--textColor);
     padding: 1rem;
     text-align: center;
-    position: fixed;
+    
     bottom: 0;
     width: 100%;
   }
@@ -131,7 +135,7 @@ footer {
   }
   .log-btn{
     float:right;
-    margin-left: auto;
+    margin-left: 700px;
     background-color: burlywood;
     color:black;
     border: none;
