--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
+ 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
+   
+}
+
 .App {
   text-align: center;
 }
