--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+.body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -52,21 +52,48 @@ nav img {
 .nav-links ul li:hover::after{
     width: 100%;
 }
+.text-box{
+    width: 90%;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+}
+.text-box h1{
+    font-size: 60px;
+}
+.text-box p{
+    margin: 10px 0 40px;
+    font-size: 20%;
+}
+.hero-btn{
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    border: 1PX SOLID #fff;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+
+}
+.hero-btn:hover{
+    border: 1px solid #f44336;
+    background: #f44336;
+    transition: 1s;
+}
+nav .fa{
+    display: none;
+}
 
 
 .container {
     max-width: 1200px;
     margin: 20px auto;
     padding: 20px;
-}
-
-h1, h2 {
-    color: #333;
-}
-
-p {
-    line-height: 1.6;
-    color: #666;
 }
 
 button {
@@ -81,9 +108,32 @@ button:hover {
     background-color: #555;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
+    .text-box h1{
+        font-size: 20px;
+    }
     nav a {
         display: block;
         margin: 10px 0;
+    }
+    .nav-links ul li{
+        display: block;
+    }
+    .nav-links{
+        position: absolute;
+        background: #f44336;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: 0;
+        text-align: left;
+        z-index: 2;
+    }
+    nav .fa{
+        display: block;
+        color: #fff;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
     }
 }
