--- a/project/src/App.css
+++ b/project/src/App.css
@@ -1,9 +1,10 @@
 .App{
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   background-color: rgb(8, 8, 73);
 }
-.content-wrap{
-  flex: 1;
+body{
+  background-color: rgb(8, 8, 73);
+
 }
