--- a/project/src/WelcomeSection.css
+++ b/project/src/WelcomeSection.css
@@ -7,7 +7,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 20vh; /* Optional: Set the height of the container as 100% of the viewport height */
+
+    height: 50vh; /* Optional: Set the height of the container as 100% of the viewport height */
   }
   /*.img{
     width: 100px;
@@ -17,6 +18,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    height: 100vh;
+    background-color: rgb(8, 8, 73);
+
   }
   
