--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .body {
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
@@ -44,7 +44,7 @@ nav img {
     content: '';
     width: 0;
     height: 2px;
-    background: #f5645a;
+    background: #c9f55a;
     display: block;
     margin: auto;
     transition: 0.5s;
@@ -53,7 +53,7 @@ nav img {
     width: 100%;
 }
 .text-box{
-    width: 90%;
+    width: 100%;
     color: #fff;
     position: absolute;
     top: 50%;
@@ -62,11 +62,12 @@ nav img {
     text-align: center;
 }
 .text-box h1{
-    font-size: 60px;
+    font-size: 62px;
 }
 .text-box p{
     margin: 10px 0 40px;
-    font-size: 20%;
+    font-size: 14%;
+    color: #fff;
 }
 .hero-btn{
     display: inline-block;
@@ -89,7 +90,6 @@ nav .fa{
     display: none;
 }
 
-
 .container {
     max-width: 1200px;
     margin: 20px auto;
@@ -107,8 +107,17 @@ button {
 button:hover {
     background-color: #555;
 }
+.nav-linked ul li::after{
+    content: '';
+    width: 0;
+    height: 2px;
+    background: #f55a5a;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
 
-@media only screen and (max-width: 700px) {
+}
+@media(max-width: 700px) {
     .text-box h1{
         font-size: 20px;
     }
@@ -125,9 +134,10 @@ button:hover {
         height: 100vh;
         width: 200px;
         top: 0;
-        right: 0;
+        right: -200px;
         text-align: left;
         z-index: 2;
+        transition: 1s;
     }
     nav .fa{
         display: block;
@@ -136,4 +146,7 @@ button:hover {
         font-size: 22px;
         cursor: pointer;
     }
+    .nav-links ul{
+    padding: 30px;    
+    } 
 }
