--- a/my-react-app/src/Components/Login/login.css
+++ b/my-react-app/src/Components/Login/login.css
@@ -6,6 +6,7 @@
     margin-top: 2oopx;
     width: 6oopx;
     padding-bottom: 30px;
+    background-repeat: no-repeat;
     }
     .header {
       display: flex;
