--- a/my-react-app/src/Components/missing/missing.css
+++ b/my-react-app/src/Components/missing/missing.css
@@ -6,6 +6,7 @@
   margin-top: 2oopx;
   width: 6oopx;
   padding-bottom: 30px;
+  background-repeat: no-repeat;
   }
   .header {
     display: flex;
@@ -37,14 +38,14 @@
     display: flex;
     align-items: center;
     margin: auto;
-    width: 200px;
+    width: 300px;
     height: 40px;
     background: white;
     border-radius: 15px;
   }
   .input input{
       height: 40px;
-      width: 200px;
+      width: 300px;
       background: transparent;
       border-radius: 15px;
       color: gray;
