--- a/report/src/App.css
+++ b/report/src/App.css
@@ -1195,3 +1195,14 @@ html {
   border-top: 1px solid #dee2e6;
   border-bottom: 1px solid #dee2e6;
 }
+
+
+/*Navbar */
+.left-side {
+  display: flex;
+  align-items: center;
+}
+
+.right-side {
+  margin-left: auto;
+}
