--- a/assignment-1/src/index.css
+++ b/assignment-1/src/index.css
@@ -27,6 +27,14 @@ section {
   margin: auto;
 }
 
+@media screen and (max-width: 768px) {
+  section {
+    padding:10px;
+    width: 100%;
+    margin: auto;
+  }
+}
+
 a {
   text-decoration: none;
 }
