--- a/assignment_websiwte/src/Home.css
+++ b/assignment_websiwte/src/Home.css
@@ -1,14 +1,47 @@
 
 
-.home_content_container{
-    display: grid;
-    grid-template-columns: 40% 55%;
-    grid-template-rows: 600px;
-    column-gap: 3%;
-    background-color: blueviolet;
-    text-align: center;
-}
 
-.home_content_container_item{
-    border: 1px solid black;
+
+
+
+#hero_image{
+    width: 100%;
+    height: 600px;
+    
+    position: relative;
 }
+  
+
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 70%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+    color: rgb(82, 82, 237);
+  }
+
+  p{
+    font-size: 22px;
+  }
+
+  h1{
+    font-size: 64px;
+    font-family: sans-serif;
+    
+  }
+
+  .login_btn{
+    width: 170px;
+    height: 60px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(82, 82, 237);
+    color: white;
+    font-size: 22px;
+  }
+
+  h4{
+    color: rgb(70, 52, 5);
+    margin: 100px;
+  }
