--- a/src/Styling/Dashboard.css
+++ b/src/Styling/Dashboard.css
@@ -40,7 +40,7 @@
 
 .middleSection0 {
   border-radius: 20px;
-  gap:20px;
+  gap:10px;
   justify-content: center;
   align-items: center;
   height: 96%;
@@ -54,28 +54,38 @@
 
 .m1 {
     background-color: white;
-    height: 92%;
-    width: 53%;
+    height: 96%;
+    width: 59%;
+    border-radius: 10px;
+}
+
+#ntop {
+    margin-left: 40px;
+    gap: 5px;
+    margin-bottom: -19px;
 }
 
 .m2 {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    height: 92%;
+    gap: 10px;
+    height: 96%;
     width: 37%;
 }
 
 .m21 {
+    padding: 1px;
     background-color: white;
-    height: 42%;
-    width: 97%;
+    height: 47%;
+    width: 100%;
+    border-radius: 10px;
 }
 
 .m22 {
     background-color: white;
-    height: 53%;
-    width: 97%;
+    height: 99%;
+    width: 100%;
+    border-radius: 10px;
 }
 
 .middleSection1 {
@@ -87,6 +97,17 @@
     background-color: #eee;
     display: flex;
     flex-direction: column;
+}
+
+.middleSection10 {
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+  height: 96%;
+  width: 96%;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
 }
 
 .loginButton {
