--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,28 @@ nav a {
 }
 
 
+.banner-content {
+  margin-left: 250px;
+  margin-right: 250px;
+}
+
+.banner-title, .banner-overview {
+  text-align: center;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.BannerImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+  transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
+}
+
+.BannerImage:hover {
+  transform: scale(1.01); /* Adjust the scale factor based on your preference */
+  box-shadow: 0px 16px 40px grey;
+}
 
 
 .footer-container {
@@ -54,14 +76,19 @@ nav a {
   align-items: center;
 }
 
-.footer-left {
+.footer-items {
   flex: 1;
-  margin-left: 100px; 
+  margin-left: 250px;
+  margin-right: 250px;
+  text-align: center;
+
 }
 
-.footer-right {
-  flex: 1;
-  margin-right: 100px; }
+. pdf-iframe {
+  zoom: 100%;
+}
 
-
+.parent-container {
+  display: flex;
+}
   
