Background colour changed to linear-gradient

--- a/report/src/App.css
+++ b/report/src/App.css
@@ -15,7 +15,7 @@ html {
   }
   
   body {
-    color: #333;
+    color: #ffffff;
     background: linear-gradient(to bottom, #ee7724, #d8363a, #dd3675, #b44593);
     font: 16px/1.6 "Muli", sans-serif;
     min-width: 320px;
