--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .body {
-    font-family: 'Poppins', sans-serif;
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
@@ -44,7 +44,7 @@ nav img {
     content: '';
     width: 0;
     height: 2px;
-    background: #c9f55a;
+    background: #f5645a;
     display: block;
     margin: auto;
     transition: 0.5s;
@@ -53,7 +53,7 @@ nav img {
     width: 100%;
 }
 .text-box{
-    width: 100%;
+    width: 90%;
     color: #fff;
     position: absolute;
     top: 50%;
@@ -62,12 +62,11 @@ nav img {
     text-align: center;
 }
 .text-box h1{
-    font-size: 62px;
+    font-size: 60px;
 }
 .text-box p{
     margin: 10px 0 40px;
-    font-size: 14%;
-    color: #fff;
+    font-size: 20%;
 }
 .hero-btn{
     display: inline-block;
@@ -90,6 +89,7 @@ nav .fa{
     display: none;
 }
 
+
 .container {
     max-width: 1200px;
     margin: 20px auto;
@@ -107,17 +107,8 @@ button {
 button:hover {
     background-color: #555;
 }
-.nav-linked ul li::after{
-    content: '';
-    width: 0;
-    height: 2px;
-    background: #f55a5a;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
 
-}
-@media(max-width: 700px) {
+@media only screen and (max-width: 700px) {
     .text-box h1{
         font-size: 20px;
     }
@@ -134,10 +125,9 @@ button:hover {
         height: 100vh;
         width: 200px;
         top: 0;
-        right: -200px;
+        right: 0;
         text-align: left;
         z-index: 2;
-        transition: 1s;
     }
     nav .fa{
         display: block;
@@ -146,7 +136,4 @@ button:hover {
         font-size: 22px;
         cursor: pointer;
     }
-    .nav-links ul{
-    padding: 30px;    
-    } 
 }
