I added a lot of things, I added pages like the Help and support page, I also added a page called frequesntly asked questions.

--- a/src/components/DashboardPage.css
+++ b/src/components/DashboardPage.css
@@ -35,11 +35,10 @@
   font-size: 1.5rem;
 }
 
-/* Logout Button */
 .dashboard-header button {
   padding: 10px;
-  background-color: rgb(204, 188, 188)0c; 
-  color: #ffffff; 
+  background-color: rgb(17, 35, 168)0c; 
+  color: #000000; 
   border: none;
   cursor: pointer;
 }
