--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -60,7 +60,7 @@ body {
   }
   
   button {
-    background-color: #007bff;
+    background-color: #084f9a;
     color: white;
     padding: 0.8rem 1.5rem;
     font-size: 1rem;
@@ -71,7 +71,7 @@ body {
   }
   
   button:hover {
-    background-color: #0056b3;
+    background-color: #00448d;
   }
   
   footer {
