--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(83, 219, 214); 
+    background-color:  #007bff;
     padding: 10px 20px;
   }
   
