created the navigation for the system

--- a/new-app/src/App.css
+++ b/new-app/src/App.css
@@ -92,7 +92,48 @@ ul{
   font-family: sans-serif;
   font-size: +10;
 }
+.horiznav1 {
+  margin-left: 500px;
+  margin-right: 15px;
+  font-family: sans-serif;
+  font-size: +10;
+}
 .horiznav li:hover {
   text-decoration: underline;
   text-decoration-color: #BD9C6C;
+}
+.frontgate{
+  background-color: #BD9C6C;
+  color:#fff;
+  border-radius: 2px;
+  border-width: 2px;
+  border-color:#fff ;
+  transition: all 0.15s;
+  cursor: pointer;
+}
+.frontgate  :hover{
+  opacity:0.2;
+  
+  
+}
+.frontgate li :hover{
+  text-decoration: none;
+  border-style: none;
+  border-color: #BD9C6C;
+  
+}
+.l200{
+  display:flex;
+  flex:50%,50%;
+}
+#sem1{
+  margin-right: 100px;
+}
+#sem2{
+  margin-right:5px;
+}
+horiznav link{
+  text-decoration: none;
+  color:#BD9C6C;
+  
 }
