--- a/grading-website/src/components/HeroSection.css
+++ b/grading-website/src/components/HeroSection.css
@@ -14,8 +14,8 @@
 }
 .overview-section{
   position:absolute;
-  top:-100px;
-  left:200px;
+  top:-200px;
+  left:300px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,8 +47,8 @@
     width:500px;
     height:300px;
     left:800px;
-    top:150px;
-    
+    top:80px;
+    bottom:500px;
   }
   .page-image img{
     width:500px;
@@ -56,3 +56,18 @@
     object-fit: cover;
     z-index:2;
   }
+  .card-container{
+    position: absolute;
+    left:250px;
+    top:400px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 10px;
+    
+  }
+  .card-item{
+    position: absolute;
+    left:400px;
+    top:720px;
+  }
+  
