--- a/grading-website/src/components/Navbar.css
+++ b/grading-website/src/components/Navbar.css
@@ -3,6 +3,7 @@ width:1500px;
 height:50px;
 display: flex;
 flex-direction: row;
+z-index:100;
 }
 .navbar-container{
   background-color: rgb(44, 42, 42);
