--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
   min-height: 100vh;
   padding: 30px;
   color: #224;
-  background: url(https://source.unsplash.com/E8Ufcyxz514/2400x1823) center / cover no-repeat fixed;
+  background: url('./background.jpg') center / cover no-repeat fixed;
 }
 
 h1 {
