--- a/src/Styles/customStyles/LandPage.css
+++ b/src/Styles/customStyles/LandPage.css
@@ -4,7 +4,7 @@
 
 
 body{
-    background-image: url('../../../public/bg-2\ \(1\).jpg');
+    background-image: url('/bg-2\ \(1\).jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
