--- a/grading-website/src/components/RightSidebar.css
+++ b/grading-website/src/components/RightSidebar.css
@@ -19,6 +19,10 @@
     flex-direction: column;
     justify-content: end;
   }
+  .nav-link-container img{
+    margin-left:30px;
+    width: 90px;
+  }
   .nav-link{
     transition: transform 0.3s ease-in-out;
   }
