--- a/grading-website/src/components/HeroSection.css
+++ b/grading-website/src/components/HeroSection.css
@@ -70,4 +70,63 @@
     left:400px;
     top:720px;
   }
+  .student-login-details{
+    position:fixed;
+   display: flex;
+   flex-direction: column;
+   margin-left:900px;
+    margin-top:200px;
+  }
+  .student-id-container,
+  .studnent-pin-container{
+    position: relative;
+    
+  }
+  .student-id-container input,
+  .student-pin-container input{
+    width:300px;
+    height:50px;
+    margin-bottom: 30px;
+    padding-left: 30px;
+    border:1px solid #ffffff;
+    border-radius:150px;
+    background:transparent;
+    color:white ;
+  }
+  .student-id-container input::placeholder,
+  .student-pin-container input::placeholder{
+    color:white;
+  }
+  .student-id-container div,
+  .student-pin-container div{
+    position: absolute;
+    right:-50px;
+    bottom:3px;
+    opacity:0;
+    color:black;
+    background-color: white;
+    padding:5px 10px 5px 10px;
+    font-size: 12px;
+    pointer-events: none;
+  }
+  .student-id-container:hover div,
+  .student-id-container:hover div{
+    opacity:1;
+  }
+  .submit-button-container{
+    position: fixed;
+    margin-left: 900px;
+    margin-top: 350px;
+    
+  }
+  .submit-button-container button{
+    position:absolute;
+    left:50px;
+    width: 200px;
+    height: 50px;
+    border-radius: 100px;
+    background-color: rgb(205, 153, 56);
+    color:white;
+    font-size: 18px;
+  }
   
