--- a/fga/src/Styles/ComponentStyles/Footer.css
+++ b/fga/src/Styles/ComponentStyles/Footer.css
@@ -2,11 +2,19 @@
     position: absolute;
     top: 777px;
     left: 0px;
-    background-color: #fff;
-    width: 1440px;
+    background-color: #439df8c7;
+    width: 100%;
     height: 247px;
   }
 
+  .footer li {
+    margin-left: auto;
+    display: inline-block;
+    
+    width: 33%;    
+  }
+
+ /**
   .footer-navlinks {
     position: absolute;
     top: 798px;
@@ -39,3 +47,4 @@
     height: 144px;
   }
   
+ */
