--- a/fga/src/Styles/ComponentStyles/Header.css
+++ b/fga/src/Styles/ComponentStyles/Header.css
@@ -1,8 +1,11 @@
 .header {
-    position: absolute;
-    top: 0px;
-    left: 0px;
+    margin:0px 0px 0px 0px;
     background-color: #1976d2;
-    width: 1440px;
-    height: 160px;
+    width: 100%;
+    height: 100px;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
   }
