--- a/fga/src/Styles/ComponentStyles/Overview.css
+++ b/fga/src/Styles/ComponentStyles/Overview.css
@@ -3,8 +3,10 @@
     top: 160px;
     left: 348px;
     background-color: #fff;
-    width: 1092px;
-    height: 617px;
+    
+    float: right;
   }
 
-  
+  h2 {
+    margin-left: 20px;
+  }
