--- a/grading-website/src/App.css
+++ b/grading-website/src/App.css
@@ -1,6 +1,9 @@
 
 body, html {
-  min-height: 100vh;
+  min-height: 150vh;
   margin: 0; /* Remove default margin */
   padding: 0; /* Remove default padding */
+}
+#root {
+  margin-bottom: 2000px; 
 }
