--- a/grading-website/src/components/HeroSection.css
+++ b/grading-website/src/components/HeroSection.css
@@ -130,3 +130,98 @@
     font-size: 18px;
   }
   
+  .page-welcome-note-container{
+  margin-left:550px;
+  margin-top:70px;
+  position: relative;
+  }
+  .page-welcome-note-container h3{
+    color:rgb(30, 25, 25);
+
+  }
+  .page-welcome-note-container p{
+    font-size: 18px;
+    color:black;
+    position: absolute;
+    left:150px;
+  }
+  .search-input-container{
+    position: relative;
+    margin-left:450px;
+    margin-top: 50px;
+    width: 600px;
+    
+  }
+  .search-input input{
+    width:600px;
+    padding-left: 20px;
+  }
+ 
+  .search-icon-container{
+    position: absolute;
+    right:10px;
+    bottom: 5px;
+    width: 15px;
+  }
+  .search-icon-container img{
+    width: 100%;
+  }
+  .faq-section-header{
+    border:1px solid white;
+    margin-left: 350px;
+    margin-top: 80px;
+    margin-bottom: -80px;
+    width: 300px;
+    display: flex;
+    justify-content: center;
+  }
+  .contact-form-header{
+    border:1px solid white;
+    width:300px;
+    display: flex;
+    justify-content: center;
+    margin-left:1000px;
+    margin-top:60px ;
+    margin-bottom: 0px;
+  }
+  .contact-form-container{
+    position: relative;
+    display:flex;
+    flex-direction: column;
+    margin-left: 900px;
+    margin-top: 30px;
+    border:1px solid rgb(32, 27, 27);
+    background-color:transparent;
+    width: 500px;
+    height: 400px;
+  }
+  .contact-form-container p{
+    font-weight: 500px;
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+  .id-container,
+  .email-container,
+  .message-button-container{
+    width:400px;
+    margin-left:30px;
+  }
+  .message-container{
+    width:400px;
+    height: 200px;
+    margin-left:30px;
+  }
+  .id-container input,
+  .email-container input{
+    width: 100%;
+    padding-left: 20px;
+  }
+  .message-container textarea{
+    width: 100%;
+    height: 80%;
+  }
+  .message-button-container button{
+    width: 100%;
+    margin-top:10px;
+    background-color: rgb(181, 214, 242);
+  }
