--- a/grade_reporting_system/src/CSS/Sidebar.css
+++ b/grade_reporting_system/src/CSS/Sidebar.css
@@ -1,32 +1,95 @@
 .sidebar {
-  width: 200px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 174px;
   padding: 20px;
-  background-color: #f5f5f5;
+  background-color:rgba(240, 240, 240, 0.95);
+  z-index: 50;
+  overflow-y: auto;
+}
+
+.logo{
+  margin-left: -30px;
+  margin-top: -18px;
+  margin-bottom: 80px;
+  background-color: rgba(200, 255, 255, 0.95);
+  padding: 10.5px 10px;
+  box-shadow: 1px 2.5px 0.7px rgba(0, 0, 0, 0.06);
 }
 
 .logo img {
   width: 100%;
 }
 
+.sidebar-link {
+  display: flex;
+  align-items: center;
+  padding: 10px ;
+  margin: 10px 5px;
+  border-radius: 10px;
+  transition: background-color 0.3s;
+  transition: background-color 0.3s;
+}
+
+.sidebar-link:hover {
+  background-color: #d1d0d0;
+  color:  rgb(4, 144, 144);
+}
+
+.sidebar-link img {
+  display: block;
+  height: 30px;
+  margin-right: 10px;
+}
+
+.sidebar-link:hover img {
+  /* height: 32px; */
+}
+
 .nav-links {
-  margin-top: 20px;
+  margin-top: -20px;
 }
 
 .nav-links a {
   display: block;
-  margin-bottom: 10px;
-  color: inherit;
+  text-align: left;
+  color: rgb(15, 23, 42);
   text-decoration: none;
+  font-size: small;
+  font-weight: 350;
+  transition: background-color 0.3s;
 }
 
-.nav-links a.active {
-  font-weight: bold;
+
+.nav-links a:active {
+  font-weight: 700;
 }
 
 .settings {
+  margin: 10px;
   margin-top: 20px;
 }
 
-.footer {
-  margin-top: 20px;
+.settings a{
+  text-decoration: none;
+  display: block;
+  margin-top: 10px;
 }
+
+.settings .cust{
+  margin-bottom: 40px ;
+}
+
+.footer {
+  margin-top: 50px;
+}
+
+a button{
+  background-color:  rgb(2, 189, 189);
+  transition: background-color 0.3s;
+} 
+a button:hover{
+  background-color:  rgb(4, 144, 144);
+} 
