--- a/grade_reporting_system/src/index.css
+++ b/grade_reporting_system/src/index.css
@@ -1,4 +1,6 @@
 body {
+  padding-top: 60px;
+  padding-left: 220px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
