--- a/grade_reporting_system/src/CSS/Footer.css
+++ b/grade_reporting_system/src/CSS/Footer.css
@@ -1,8 +1,6 @@
 .footer {
-  display: flex;
-  justify-content: space-between;
   padding: 20px;
-  background-color: #7c6d6d;
+  background-color: rgba(124, 109, 109, 0.65);
 }
 
 .footer h3 {
@@ -21,3 +19,43 @@
 .footer a:hover {
   text-decoration: underline;
 }
+
+.quick-links{
+  display:flex;
+  flex-direction: column;
+}
+
+.footer-container{
+  padding: 0;
+  background-color: #b06262;
+}
+
+svg{
+  height: 30px;
+  margin-top: 10px;
+}
+
+.footer-upper{
+  margin-bottom: 20px;
+}
+
+.social-media-links a{
+  margin: 10px;
+  margin-top: 0;
+}
+
+.footer-lower{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.copyright-info{
+  text-align: left;
+}
+
+.social-media-links{
+  margin-left: 70px;
+}
+
+
+
