--- a/grade_reporting_system/src/CSS/Header.css
+++ b/grade_reporting_system/src/CSS/Header.css
@@ -1,19 +1,58 @@
+/* Header.css */
+
 .header {
   display: flex;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 215px;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
-  background-color: #f5f5f5;
+  padding: 10px 20px;
+  box-shadow: 1px 2.5px 0.7px rgba(0, 0, 0, 0.06);
+  background-color: rgba(200, 255, 255, 0.95); /* Adjust the background color as needed */
+  z-index: 100;
 }
 
-.header.dark {
-  background-color: #333;
-  color: #f5f5f5;
+.search-bar {
+  position: relative;
+  width: 200px;
+  margin-right: 30px; 
+  margin-left: 65px; 
 }
 
 .search-bar input {
-  width: 200px;
-  padding: 5px;
+  padding: 8px;
+  min-width: 100px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  font-size: large;
+  box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.06);
+}
+
+.search-bar input::placeholder {
+  font-style: italic;
+}
+
+.search-button {
+  position: absolute;
+  right: -26.5px;
+  top: 0.9px;
+  width: 40px;
+  height: 36.5px;
+  background-color: white;
+  border-radius: 25px;
+  transition: background-color 0.3s;
+}
+
+.search-button:hover {
+  background-color: #e1dddd;
+}
+
+.search-icon {
+  height: 22px;
+  margin-left: -9px;
+  margin-top: -2px;
 }
 
 .header-buttons {
@@ -21,21 +60,68 @@
   align-items: center;
 }
 
+.menu-button,
+.notification-button,
+.profile-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(2, 189, 189); /* Adjust the background color as needed */
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  padding-top: 4px;
+  margin-right: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.menu-button:hover,
+.notification-button:hover,
+.profile-button:hover {
+  background-color: rgb(4, 144, 144); /* Adjust the hover background color as needed */
+}
+
 .dropdown {
   position: relative;
-  display: inline-block;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
+  right: 7px;
   background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
+  width: 110px;
+  min-width: 110px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  border-radius: 5px;
+}
+
+.dropdown-content a,
+.dropdown-content button {
+  color: #333;
+  padding: 12px;
+  text-decoration: none;
+  margin: 5px;
+  display: block;
+}
+
+.dropdown-content button{
+  background-color: rgb(2, 189, 189); ;
+}
+
+.dropdown-content a:hover,
+.dropdown-content button:hover {
+  background-color: #ddd;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+.dark {
+  background-color: #333; /* Dark mode background color */
+  color: #fff; /* Dark mode text color */
 }
