--- a/grade_reporting_system/src/CSS/HomePage.css
+++ b/grade_reporting_system/src/CSS/HomePage.css
@@ -2,6 +2,7 @@
 
 .home-container {
   padding: 20px;
+  background-color:  #f5f5f5;
 }
 
 .home-content {
@@ -21,13 +22,13 @@
   display: block;
   margin-bottom: 10px;
   text-decoration: none;
-  color: #007bff;
+  color: rgb(2, 189, 189);
   font-weight: bold;
   transition: color 0.3s;
 }
 
 .home-navigation a:hover {
-  color: #0056b3;
+  color: rgb(4, 144, 144);
 }
 
 .home-highlights,
