--- a/grade_reporting_system/src/CSS/LandingPage.css
+++ b/grade_reporting_system/src/CSS/LandingPage.css
@@ -5,7 +5,10 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f5f5f5;
+  background-color: rgba(240, 240, 240, 1); 
+  background-image: url(../Images/bg.jpg);
+  background-size: cover;
+  opacity: 0.87;
 }
 
 .landing-content {
@@ -25,7 +28,7 @@
   margin: 0 10px;
   text-decoration: none;
   color: #fff;
-  background-color: #007bff;
+  background-color: rgb(2, 189, 189);
   border-radius: 5px;
   font-weight: bold;
   transition: background-color 0.3s;
@@ -33,7 +36,7 @@
 
 .login-button:hover,
 .signup-button:hover {
-  background-color: #0056b3;
+  background-color:  rgb(4, 144, 144);
 }
 
 .key-features {
@@ -41,7 +44,7 @@
 }
 
 .key-features h2 {
-  color: #333;
+  color: #615353;
 }
 
 .featured-announcements {
