Added the notification to the Dashboard page and functionality to show messages of grade not showing

--- a/new-app/src/pages/pages.css
+++ b/new-app/src/pages/pages.css
@@ -34,3 +34,29 @@
     color:#f1f1f1
 
   }
+  .tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+  }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 9px;
+    height: 9px;
+    background-color: red;
+    color: #fff;
+    font-size: 8px;
+    padding-top: 0px;
+    text-align: center;
+    border-radius: 2.5px;
+    padding: 5px 0;
+  
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
