--- a/assignment_websiwte/src/Login_page.css
+++ b/assignment_websiwte/src/Login_page.css
@@ -3,9 +3,15 @@
     padding: 0;
 }
 
+
 body{
-    background-color: #5b5a5a;
+   
     position: relative;
+}
+.form_background{
+    width: 1366px;
+    height: 679px;
+    background-color: #5b5a5a;
 }
 
 .form_container{
@@ -36,6 +42,10 @@ input{
     border-radius: 30px;
     height: 80px;
     margin-bottom: 30px;
+}
+.sign_in:hover{
+    opacity: 0.5;
+    color: aliceblue;
 }
 
 ::placeholder{
