Finished routing and linking the pages, and worked on the landing, login pages!!

--- a/missing-grade-reporting-system/src/App.css
+++ b/missing-grade-reporting-system/src/App.css
@@ -1,7 +1,4 @@
-/* styles.css or App.css */
+/* styles.css */
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
-
-
-
