--- a/my-react/src/Home.css
+++ b/my-react/src/Home.css
@@ -36,7 +36,8 @@
   
   }
   .heading{
-    color: black;
+    color: white;
+    margin-top: 20px;
   }
   h1{
    
@@ -44,6 +45,7 @@
     text-align: center;
     display: block;
     margin-top: 0px;
+    margin-top: 20px;
   }
   h2{
      color: rgb(203, 137, 38);
@@ -59,8 +61,9 @@
   
   .topic-paragraph{
     background-color: #00357a;
-    padding-top: 30px;
+    padding-top: 0px;
     padding-bottom: 30px;
+    color: white;
   }
   .image-content{
     padding-top: 50px;
